--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #000;
 }
 
 body p {
@@ -18,35 +19,56 @@ body p {
         align-items: center;
 
         .contato {
-            width: 65%;
+            width: 75%;
             display: flex;
             flex-direction: row;
 
             margin-top: 10px;
-        }
 
-        .contato p {
-            padding: 5px;
-            margin-right: 20px;
+            .links {
+                display: flex;
+                flex-direction: row;
+            }
 
-            cursor: pointer;
-            transition: 0.2s ease-in-out;
+            .links p {
+                padding: 5px;
+                margin-right: 20px;
+    
+                cursor: pointer;
+                transition: 0.2s ease-in-out;
+    
+                border-radius: 50px;
+                color: #fff;
+            }
+            
+            .links p:hover {
+                transform: scale(1.2);
+                background-color: #00000020;
+            }
 
-            border-radius: 50px;
-            color: #fff;
-        }
+            .social_media {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
 
-        .contato p:hover {
-            transform: scale(1.2);
-            background-color: #00000020;
+                margin-left: auto;
+                color: #fff;
+
+                .fa-brands {
+                    color: #fff;
+                    margin-right: 10px;
+                    font-size: 20px;
+                }
+            }
         }
 
         .search {
-            width: 65%;
+            width: 75%;
             display: flex;
             flex-direction: row;
             align-items: center;
-            margin: 5px 0px 30px 0px;
+            margin: 10px 0px 30px 0px;
 
             .logo {
                 height: 50px;
@@ -75,6 +97,8 @@ body p {
                     color: #ffffff80;
                     position: absolute;
                     margin-right: 15px;
+                    cursor: pointer;
+                    z-index: 99;
                 }
     
                 ::placeholder {
@@ -103,9 +127,132 @@ body p {
     .navbar {
         width: 100%;
         height: 100px;
-        background-color: red; 
+        background-color: #c53c4c; 
 
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 60px;
+
+        .item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: 0.5s ease-in-out;
+        }
+
+        .item:hover {
+            transform: scale(1.2);
+        }
+
+        .item i {
+            font-size: 30px;
+            color: #fff;
+        }
+
+        .item p {
+            margin-top: 10px;
+            font-weight: 700;
+            color: #fff;
+        }
+    }
+
+    .banner {
+        width: 100%;
+        height: 600px;
+        background-color: #000; 
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .fa-solid {
+            color: #fff;
+            font-size: 40px;
+
+            z-index: 1;
+            cursor: pointer;
+            transition: 0.3s ease-in-out;
+        }
+
+        .fa-chevron-left:hover, .fa-chevron-right:hover {
+            transform: scale(1.2);
+        }
+
+        .fa-chevron-left {
+            margin-left: 30px;
+        }
+
+        .fa-chevron-right {
+            margin-right: 30px;
+        }
+
+        .banner_image {
+            width: 100%;
+            height: 600px;
+            opacity: 0.3;
+            position: absolute;
+
+            z-index: 0;
+        }
+
+        .pagination {
+            display: flex;
+            flex-direction: row;
+            align-self: flex-end;
+            margin-bottom: 20px;
+            gap: 20px;
+
+            .fa-circle {
+                color: #fff;
+                font-size: 20px;
+                cursor: auto;
+    
+                z-index: 1;
+            }
+        }
+    }
+
+    .service_button {
+        background-color: #3db168;
+        border: none;
+        padding: 12px 24px;
+        border-radius: 50px;
+
+        cursor: pointer;
+        margin-left: 30px;
+        position: fixed;
+
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #fff;
+        right: 30px;
+        bottom: 40px;
+        transition: 0.3s ease-in-out;
+        font-size: 16px;
+
+        .fa-brands {
+            font-size: 24px;
+        }
+    }
+
+    .service_button:hover {
+        transform: scale(1.2);
+    }
+
+    .products {
+        width: 100%;
+        height: 1500px;
+        background-color: #c1c1c1; 
+    }
+
+    .footer {
+        width: 100%;
+        height: 400px;
+        background-color: #282828; 
     }
 }
