--- a/styles/index.css
+++ b/styles/index.css
@@ -60,6 +60,15 @@ body p {
                     margin-right: 10px;
                     font-size: 20px;
                 }
+
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                }
+
+                a:hover {
+                    text-decoration: underline;
+                }
             }
         }
 
@@ -118,6 +127,10 @@ body p {
                 display: flex;
                 align-items: baseline;
                 gap: 10px;
+            }
+
+            a {
+                text-decoration: none;
             }
 
         }
@@ -193,10 +206,46 @@ body p {
         .banner_image {
             width: 100%;
             height: 600px;
-            opacity: 0.3;
             position: absolute;
 
             z-index: 0;
+            opacity: 0;
+            transition: all 0.7s linear;
+        }
+
+        .current {
+            opacity: 0.4;
+        }
+
+        .banner_info {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
+            left: 300px;
+            transition: 0.6s;
+
+            p {
+                color: #fff;
+                font-weight: 500;
+            }
+
+            .title {
+                font-size: 40px;
+            }
+
+            button {
+                background-color: #fff;
+                border: none;
+                padding: 10px 20px;
+                width: fit-content;
+                border-radius: 10px;
+
+                cursor: pointer;
+
+                display: flex;
+                align-items: center;
+            }
         }
 
         .pagination {
@@ -246,8 +295,97 @@ body p {
 
     .products {
         width: 100%;
-        height: 1500px;
-        background-color: #c1c1c1; 
+        padding: 50px 0 80px 0;
+        background-color: #838383; 
+        display: flex;
+        justify-content: center;
+
+        .content {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+
+            .title {
+                color: #000;
+                font-size: 34px;
+                font-weight: 600;
+
+                margin-bottom: 40px;
+            }
+
+            .row {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 100%;
+
+                .product {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    height: 460px;
+                    width: 320px;
+
+                    background-color: #282828;
+
+                    border-radius: 0 50px 50px 50px;
+                    padding: 10px 10px 20px 10px;
+
+                    img {
+                        height: 55%;
+                        width: 100%;
+                        border-radius: 0 40px 0 0;
+                        object-fit: cover;
+                    }
+
+                    .texts {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+
+                        margin: auto 0;
+                        gap: 10px;
+
+                        .product_name {
+                            color: #fff;
+                            font-size: 24px;
+                        }
+    
+                        .product_price {
+                            color: red;
+                            font-size: 32px;
+                        }
+    
+                        .product_observation {
+                            color: #f1f1f1;
+                            font-size: 16px;
+                        }
+                    }
+
+                    button {
+                        background-color: #c1c1c1;
+                        border: none;
+                        padding: 12px 24px;
+                        border-radius: 30px;
+                
+                        cursor: pointer;
+                
+                        display: flex;
+                        align-items: baseline;
+                        gap: 20px;
+                        color: #000;
+                        font-size: 20px;
+
+                        transition: 0.3s ease-in-out;
+                    }
+
+                    button:hover {
+                        transform: scale(1.2);
+                    }
+                }
+            }
+        }
     }
 
     .footer {
